--- a/app/src/main/res/layout/fragment_posalji_lokaciju.xml
+++ b/app/src/main/res/layout/fragment_posalji_lokaciju.xml
@@ -4,18 +4,26 @@
     android:layout_height="match_parent"
     tools:context="com.example.stjepanlukac.prvapomoc.PosaljiLokaciju">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="328dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="DOHVATI LOKACIJU PREKO GPS"
-        android:id="@+id/textView3"
-        android:layout_gravity="center" />
+        android:text="Pronađi svoju lokaciju!"
+        android:id="@+id/textView2"
+        android:layout_gravity="center"
+        android:textSize="50dp"
+        android:textAlignment="center"/>
+
+
+    <Button
+        android:background="@drawable/red_button"
+        android:id="@+id/posalji_lokaciju"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="LOKACIJA"
+        style="@style/button_hitan_poziv"
+        android:layout_gravity="center"
+        android:layout_below="@+id/textView2" />
 
 </FrameLayout>
