--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,4 +9,9 @@
             app:showAsAction="never"
             android:title="@string/Log_Reg" />
 
+    <item
+        android:id="@+id/menu_Logout"
+        android:orderInCategory="2"
+        app:showAsAction="never"
+        android:title="@string/menu_Logout" />
 </menu>
